fix up language tests broken by recent line number additions
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2772 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/007-procedure-invocation-with-assign-and-whitespace.xml
+++ b/tests/language/working-base/007-procedure-invocation-with-assign-and-whitespace.xml
@@ -9,7 +9,7 @@
      		<typestructure></typestructure>
      	</type>   
   </types>  
-  <procedure name="echo">
+  <procedure name="echo" src="line 7">
 
       <output 
     name="a" type="file"
