--- a/tests/language/working-base/array_iteration.xml
+++ b/tests/language/working-base/array_iteration.xml
@@ -9,7 +9,7 @@
      		<typestructure></typestructure>
      	</type>   
   </types>  
-  <procedure name="echo">
+  <procedure name="echo" src="line 3">
 
       <output 
     name="f" type="file"
@@ -27,7 +27,7 @@
           <variableReference>f</variableReference></function></stdout><variableReference>s</variableReference>  </application>
     </binding>
   </procedure>
-  <procedure name="echo_batch">
+  <procedure name="echo_batch" src="line 9">
 
       <output 
     name="fa" type="file[]"
