--- a/tests/language/working-base/q15.xml
+++ b/tests/language/working-base/q15.xml
@@ -23,7 +23,7 @@
      		</typestructure>
      	</type>   
   </types>  
-  <procedure name="greeting">
+  <procedure name="greeting" src="line 8">
 
       <output 
     name="t" type="messagefile"
