--- a/tests/language/working-base/005-procedure-invocation.xml
+++ b/tests/language/working-base/005-procedure-invocation.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <procedure name="echo">
+  <procedure name="echo" src="line 2">
 
       <input 
     name="i" type="int"
