--- a/tests/language/working-base/010-foreach-array.xml
+++ b/tests/language/working-base/010-foreach-array.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <procedure name="num">
+  <procedure name="num" src="line 2">
 
       <output 
     name="n" type="int"
