--- a/tests/language/working-base/042-compound-procedure.xml
+++ b/tests/language/working-base/042-compound-procedure.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <procedure name="j">
+  <procedure name="j" src="line 1">
 
       <input 
     name="bar" type="int"
@@ -13,7 +13,7 @@
       </application>
     </binding>
   </procedure>
-  <procedure name="foo">
+  <procedure name="foo" src="line 3">
 
       <input 
     name="bar" type="int"
