--- a/tests/language/working-base/case3.xml
+++ b/tests/language/working-base/case3.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <procedure name="fn">
+  <procedure name="fn" src="line 2">
 
       <output 
     name="f" type="int"
@@ -17,7 +17,7 @@
      <variableReference>i</variableReference>
     </assign>
   </procedure>
-  <procedure name="f">
+  <procedure name="f" src="line 4">
 
       <input 
     name="i" type="int"
