--- a/tests/language/working-base/procedurecall-assign-named-return-value.xml
+++ b/tests/language/working-base/procedurecall-assign-named-return-value.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <procedure name="f">
+  <procedure name="f" src="line 1">
 
       <output 
     name="q" type="int"
