Removed support for .dtm file extension which was deprecated in Swift 0.4
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2773 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+(03/30/09)
+*** Removed support for .dtm file extension which was deprecated in Swift 0.4
+
 (03/29/09)
 *** Added console text interface to provide live information about swift 
     runs.
