Support for Condor-G submissions, by setting a job specification attribute of "grid" and specifying a gridResource attribute containing the string to be placed into the Condor-G grid_resource classad.
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2388 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -1,3 +1,9 @@
+(04/15/09)
+
+*** Support for Condor-G submissions, by setting a job specification attribute
+    of "grid" and specifying a gridResource attribute containing the string
+    to be placed into the Condor-G grid_resource classad.
+
 (03/13/09)
 
 *** Refactored common portions of providers into abstract parts
