fix type in CHANGES note
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2881 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -65,7 +65,7 @@
     made in the same statement.
 
 (02/05/09)
-*** TIghter type checking on app blocks. Primitive types and arrays of
+*** Tighter type checking on app blocks. Primitive types and arrays of
     primitive types are permitted. Other types are prohibited.
 
 *** Arrays of primitive types can be passed to app blocks, and will be
