--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+(04/27/09)
+*** Swift 0.9 built from Swift SVN r2860 and cog SVN r2388
+
 (03/30/09)
 *** Removed support for .dtm file extension which was deprecated in Swift 0.4
 
