Remove uses of print in language tests, as this was removed in r2921
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2935 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/arraymapper.xml
+++ b/tests/language/working-base/arraymapper.xml
@@ -16,7 +16,7 @@
   </variable>
   <foreach var="f"  src="line 5">
   <in><variableReference>files</variableReference></in>
-  <body><call proc="print" src="line 6">
+  <body><call proc="trace" src="line 6">
       <input><variableReference>f</variableReference></input>
     </call></body>
   </foreach>
