allow starting multiple jobs using the count attribute
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2403 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-local/CHANGES.txt
+++ b/cog/modules/provider-local/CHANGES.txt
@@ -1,3 +1,7 @@
+(05/24/2009)
+
+*** Honor the count attribute (by starting multiple jobs)
+
 (11/04/2008)
 
 *** Fixed deadlock in job submission handler caused by stderr not 
